Fix mobile map not showing when activated

--- a/src/components/PickupPoint.css
+++ b/src/components/PickupPoint.css
@@ -49,7 +49,7 @@
 }
 
 .pickup-point-availability {
-  color: #E86B60;
+  color: #e86b60;
   display: inline-block;
 }
 
